  - Add saving of hasActiveWar for towns and nations, courtesy of SulkyWhale with PR #8002.
  - Fix mountable entities having their saddles sheared, copper golems having their items dropped.
  - Add ability to set max town and nation board lengths.
  - New Config Option: global_town_settings.max_board_length
    - Default: 170
    - The maximum number of characters that the town (and nation,) board messages can be.
  - Add unformatted upkeep PAPI placeholders.
    - Closes #7943.
  - New PAPI Placeholders:
    - %townyadvanced_daily_town_upkeep_unformatted% - An unformatted town upkeep amount.
    - %townyadvanced_daily_nation_upkeep_unformatted% - An unformatted nation upkeep amount.
0.101.2.8:
  - Fix unneeded msg_invalid_name exception message from /n ally.
    - Closes #8006.
0.102.0.0:
  - Bump version for release.
0.102.0.1:
  - Add new shear-to-remove-saddle mobs to entity list, courtesy of Warrior with PR #8018.
  - Fix admin permissions on LuckPerms-using servers where OPs do not receieve towny.admin.
    - OPs will now be given the towny.admin permission node by default.
    - Closes #8017.
  - New PAPI Placeholders:
    - %townyadvanced_player_location_in_homeblock% - Returns a string TRUE or FALSE if the player is in a homeblock.
    - %townyadvanced_player_location_in_homeblock_owntown% - Returns a string TRUE or FALSE if the player is in a homeblock belonging to their town.
    - %townyadvanced_player_location_in_homeblock_ownnation% - Returns a string TRUE or FALSE if the player is in a homeblock belonging to a town in the player's nation.
    - %townyadvanced_player_location_in_homeblock_enemy% - Returns a string TRUE or FALSE if the player is in a homeblock belonging to a town that is enemied with the player's town.
    - %townyadvanced_player_location_in_homeblock_ally% - Returns a string TRUE or FALSE if the player is in a homeblock belonging to a town that is allied with the player's town.
    - Closes #8020.