@@ -16,8 +16,8 @@ public class TownSpawnEvent extends SpawnEvent {
 	private final Town fromTown;
 	private final Town toTown;
 	
-	public TownSpawnEvent(Player player, Location from, Location to, boolean cancelled, String cancelMessage) {
-		super(player, from, to);
+	public TownSpawnEvent(Player player, Location from, Location to, double cost, boolean cancelled, String cancelMessage) {
+		super(player, from, to, cost);
 
 		fromTown = WorldCoord.parseWorldCoord(from).getTownOrNull();
 		toTown = WorldCoord.parseWorldCoord(to).getTownOrNull();
