@@ -17,8 +17,8 @@ public class ResidentSpawnEvent extends SpawnEvent {
 	private final Town fromTown;
 	private final Town toTown;
 	
-	public ResidentSpawnEvent(Player player, Location from, Location to, boolean cancelled, String cancelMessage) {
-		super(player, from, to);
+	public ResidentSpawnEvent(Player player, Location from, Location to, double cost, boolean cancelled, String cancelMessage) {
+		super(player, from, to, cost);
 		
 		fromTown = WorldCoord.parseWorldCoord(from).getTownOrNull();
 		toTown = WorldCoord.parseWorldCoord(to).getTownOrNull();
